--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ src/mydjango/__pycache__/settings.cpython-35.pyc
 */static/
 .DS_Store
 .env
+.django
+.postgres
 **/.DS_Store
 src/mydjango/local_settings.py
 src/media
